[package]
name = "yapu"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/yapu-rs/yapu"
description = "AN3155-compliant programmer"
readme = "README.md"
categories = ["embedded", "command-line-utilities", "hardware-support"]
keywords = ["embedded", "uart", "serial", "bootloader", "flash", "programmer"]

[dependencies]
anyhow = { version = "1.0", optional = true }
binrw = "0.14"
clap = { version = "4.5", features = ["derive"], optional = true }
log = "0.4"
rustyline = { version = "15.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serialport = "4.7"
tabled = { version = "0.18.0", optional = true }
thiserror = "2.0"

[features]
binary = ["dep:clap", "dep:rustyline", "serde", "dep:serde_json", "dep:tabled", "dep:anyhow"]
serde = ["dep:serde"]

[[bin]]
name = "yapu"
required-features = ["binary"]

[[example]]
name = "discover"
required-features = ["binary"]
